# data-engineering-hs

./: .gitignore  pyproject.toml
lab01/: .gitignore  main.py  run.ipynb  tasks.ipynb
lab02/: tasks.ipynb
lab03/: compose.yml
lab03/sql/: script1.sql
lab04-mini-lab-databases/clickhouse/magic_shop/: profiles.yml
lab04-mini-lab-databases/clickhouse/magic_shop/models/: schema.yml
lab04-mini-lab-databases/coffee_shop/: compose.yml  main.ipynb
lab04-mini-lab-databases/start_wars/: .gitignore  main.ipynb
lab05-airflow/: .env  compose.yaml
lab05-airflow/dags/: fuel_ingest_dag.py
lab05-airflow/sql/: 001_create_table.sql
lab06-avro-streaming/: .gitignore  async_consumer.py  async_data_gen.py  avro_test.ipynb  socket_streaming.py  spark_kafka_foreachbatch.py
mini-lab-databases/clickhouse/: compose.yml
mini-lab-databases/clickhouse/magic_shop/: .gitignore  .user.yml  dbt_project.yml
mini-lab-databases/clickhouse/magic_shop/models/: src.yml
mini-lab-databases/clickhouse/magic_shop/models/marts/: fct_orders.sql
mini-lab-databases/clickhouse/magic_shop/seeds/: orders.csv
mini-lab-databases/coffee_shop/: main.ipynb
mini-lab-databases/start_wars/: main.ipynb
mini-lab-hdfs+spark-local/: spark.ipynb
orders_server-0.1.0/: .gitignore  pyproject.toml
orders_server-0.1.0/src/: client_async.py  client_thread.py  client_threads.py
orders_server-0.1.0/src/orders_server/: main.py  models.py
revenue_analysis/: generate_data_json.py  main.ipynb
