[project]
name = "de-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-clickhouse>=1.9.3",
    "dbt-core>=1.10.11",
    "duckdb>=1.4.0",
    "faker>=37.6.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pyspark>=4.0.1",
    "redis>=6.4.0",
    "tqdm>=4.67.1",
]
